use panelCategoryService in getPanelSpecialisms